out/badnet_attack_efficientnet_ffpp_6classes.out
/home/fmg/yuran/miniconda3/envs/backdoorbenchv2/lib/python3.8/site-packages/torchvision/io/image.py:13: UserWarning: Failed to load image Python extension: libc10_hip.so: cannot open shared object file: No such file or directory
  warn(f"Failed to load image Python extension: {e}")
Traceback (most recent call last):
  File "./attack/badnet.py", line 39, in <module>
    from utils.save_load_attack import save_attack_result
  File "/home/fmg2/yuran/BackdoorBench/./utils/save_load_attack.py", line 29, in <module>
    from utils.aggregate_block.dataset_and_transform_generate import dataset_and_transform_generate
  File "/home/fmg2/yuran/BackdoorBench/./utils/aggregate_block/dataset_and_transform_generate.py", line 45
    elif == dataset_name == 'ffpp_binary':
         ^
SyntaxError: invalid syntax
